grafana/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-external
  namespace: grafana
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - o11y.shion1305.com
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
